[workspace]

members = [
    "title/shark",
    "ext/renderdoc-sys",
    "ext/sdl2-sys",
    "ext/stb_image-sys",
    "ext/stb_truetype-sys",
    "ext/vulkan-sys",
    "engine/narcissus-app",
    "engine/narcissus-core",
    "engine/narcissus-font",
    "engine/narcissus-gpu",
    "engine/narcissus-image",
    "engine/narcissus-maths",
    "engine/narcissus-world",
]

resolver = "2"

[profile.release]
panic = "abort"
debug = true
opt-level = 3
lto="thin"

[profile.dev]
panic = "abort"
opt-level = 0
