[workspace]

members = [
    "title/shark",
    "external/blake3-smol",
    "external/renderdoc-sys",
    "external/sdl2-sys",
    "external/sqlite-sys",
    "external/stb_image-sys",
    "external/stb_truetype-sys",
    "external/vulkan-sys",
    "engine/narcissus-app",
    "engine/narcissus-core",
    "engine/narcissus-font",
    "engine/narcissus-gpu",
    "engine/narcissus-image",
    "engine/narcissus-maths",
    "engine/narcissus-sqlite",
    "engine/narcissus-world",
]

resolver = "2"

[profile.release]
panic = "abort"
debug = true
opt-level = 3
lto="thin"

[profile.dev]
panic = "abort"
opt-level = 0
