[package]
name = "shark-shaders"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
narcissus-core = { path = "../../engine/narcissus-core" }
narcissus-font = { path = "../../engine/narcissus-font" }
narcissus-maths = { path = "../../engine/narcissus-maths" }
narcissus-gpu = { path = "../../engine/narcissus-gpu" }